--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prismjs": "^1.29.0",
     "tailwindcss": "^3.4.4",
     "uuid": "^10.0.0",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "md-editor-v3": "4.0.0"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.55.3",
